# codecolor

./: .gitmodules  CMakeLists.txt  CodeColorerStyle.txt
Source/: CodeColorer.cpp  CodeColorer.h  JSONFile.cpp  JSONFile.h  JSONValue.cpp  JSONValue.h  Test_CodeColor.cpp  color_debug.cpp  color_debug.style  cpp.json
Test/: Test_CodeColor.cpp
